Add custom fields UI to Item type
