# kompello-web/app/lib/api/kompello/models/CustomFieldDefinitionRead.ts
@@ -1,0 +1,167 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Kompello Server API
+ * Kompello API Documentation
+ *
+ * The version of the OpenAPI document: 1.0.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { mapValues } from '../runtime';
+import type { DataTypeEnum } from './DataTypeEnum';
+import {
+    DataTypeEnumFromJSON,
+    DataTypeEnumFromJSONTyped,
+    DataTypeEnumToJSON,
+    DataTypeEnumToJSONTyped,
+} from './DataTypeEnum';
+
+/**
+ * 
+ * @export
+ * @interface CustomFieldDefinitionRead
+ */
+export interface CustomFieldDefinitionRead {
+    /**
+     * 
+     * @type {string}
+     * @memberof CustomFieldDefinitionRead
+     */
+    readonly uuid: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof CustomFieldDefinitionRead
+     */
+    key: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof CustomFieldDefinitionRead
+     */
+    name: string;
+    /**
+     * 
+     * @type {DataTypeEnum}
+     * @memberof CustomFieldDefinitionRead
+     */
+    dataType: DataTypeEnum;
+    /**
+     * 
+     * @type {string}
+     * @memberof CustomFieldDefinitionRead
+     */
+    readonly modelType: string;
+    /**
+     * 
+     * @type {string}
+     * @memberof CustomFieldDefinitionRead
+     */
+    company: string;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof CustomFieldDefinitionRead
+     */
+    trackHistory?: boolean;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof CustomFieldDefinitionRead
+     */
+    isArchived?: boolean;
+    /**
+     * 
+     * @type {boolean}
+     * @memberof CustomFieldDefinitionRead
+     */
+    showInUi?: boolean;
+    /**
+     * 
+     * @type {any}
+     * @memberof CustomFieldDefinitionRead
+     */
+    extraData?: any | null;
+    /**
+     * 
+     * @type {Date}
+     * @memberof CustomFieldDefinitionRead
+     */
+    readonly createdOn: Date;
+    /**
+     * 
+     * @type {Date}
+     * @memberof CustomFieldDefinitionRead
+     */
+    readonly modifiedOn: Date;
+}
+
+
+
+/**
+ * Check if a given object implements the CustomFieldDefinitionRead interface.
+ */
+export function instanceOfCustomFieldDefinitionRead(value: object): value is CustomFieldDefinitionRead {
+    if (!('uuid' in value) || value['uuid'] === undefined) return false;
+    if (!('key' in value) || value['key'] === undefined) return false;
+    if (!('name' in value) || value['name'] === undefined) return false;
+    if (!('dataType' in value) || value['dataType'] === undefined) return false;
+    if (!('modelType' in value) || value['modelType'] === undefined) return false;
+    if (!('company' in value) || value['company'] === undefined) return false;
+    if (!('createdOn' in value) || value['createdOn'] === undefined) return false;
+    if (!('modifiedOn' in value) || value['modifiedOn'] === undefined) return false;
+    return true;
+}
+
+export function CustomFieldDefinitionReadFromJSON(json: any): CustomFieldDefinitionRead {
+    return CustomFieldDefinitionReadFromJSONTyped(json, false);
+}
+
+export function CustomFieldDefinitionReadFromJSONTyped(json: any, ignoreDiscriminator: boolean): CustomFieldDefinitionRead {
+    if (json == null) {
+        return json;
+    }
+    return {
+        
+        'uuid': json['uuid'],
+        'key': json['key'],
+        'name': json['name'],
+        'dataType': DataTypeEnumFromJSON(json['data_type']),
+        'modelType': json['model_type'],
+        'company': json['company'],
+        'trackHistory': json['track_history'] == null ? undefined : json['track_history'],
+        'isArchived': json['is_archived'] == null ? undefined : json['is_archived'],
+        'showInUi': json['show_in_ui'] == null ? undefined : json['show_in_ui'],
+        'extraData': json['extra_data'] == null ? undefined : json['extra_data'],
+        'createdOn': (new Date(json['created_on'])),
+        'modifiedOn': (new Date(json['modified_on'])),
+    };
+}
+
+export function CustomFieldDefinitionReadToJSON(json: any): CustomFieldDefinitionRead {
+    return CustomFieldDefinitionReadToJSONTyped(json, false);
+}
+
+export function CustomFieldDefinitionReadToJSONTyped(value?: Omit<CustomFieldDefinitionRead, 'uuid'|'model_type'|'created_on'|'modified_on'> | null, ignoreDiscriminator: boolean = false): any {
+    if (value == null) {
+        return value;
+    }
+
+    return {
+        
+        'key': value['key'],
+        'name': value['name'],
+        'data_type': DataTypeEnumToJSON(value['dataType']),
+        'company': value['company'],
+        'track_history': value['trackHistory'],
+        'is_archived': value['isArchived'],
+        'show_in_ui': value['showInUi'],
+        'extra_data': value['extraData'],
+    };
+}
+
